--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "expo-notifications": "~0.27.8",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-svg": "14.1.0"
   },
   "private": true
 }
